updated the hosting path

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "i-validate",
-  "homepage":"https://ADA-Software-Engineering-Program.github.io/i-validate", 
+  "homepage":"https://ADA-Software-Engineering-Program.github.io/i-validate-landing-page", 
   "version": "0.1.0",
   "private": true,
   "dependencies": {
