Changed the hosting path and name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "i-validate",
+  "name": "i-validate-landing-page",
   "homepage": "https://ADA-Software-Engineering-Program.github.io/i-validate-landing-page",
   "version": "0.1.0",
   "private": true,
