--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "i-validate",
-  "homepage":"https://ADA-Software-Engineering-Program.github.io/i-validate-landing-page", 
+  "homepage": "https://ADA-Software-Engineering-Program.github.io/i-validate-landing-page",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,13 +11,14 @@
     "firebase": "^9.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy":"gh-pages -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
