--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.2.1",
+    "dotenv": "^16.0.3",
     "firebase": "^9.17.1",
+    "openai": "^3.2.1",
     "react": "^18.2.0",
     "react-bar-chart": "^0.1.2",
     "react-bootstrap": "^2.7.2",
