--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
     "@ibm-watson/assistant-web-chat-react": "^1.0.3",
+    "@reach/dialog": "^0.18.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.2.1",
-    "dotenv": "^16.0.3",
     "firebase": "^9.17.1",
     "openai": "^3.2.1",
     "react": "^18.2.0",
@@ -53,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "dotenv": "^16.0.3",
     "gh-pages": "^5.0.0"
   }
 }
