Worked on modal

--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
+    "@headlessui/react": "^1.7.13",
     "@ibm-watson/assistant-web-chat-react": "^1.0.3",
-    "@reach/dialog": "^0.18.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.2.1",
-    "dotenv": "^16.0.3",
     "firebase": "^9.17.1",
     "openai": "^3.2.1",
     "react": "^18.2.0",
